--- a/index.html
+++ b/index.html
@@ -1,31 +1,35 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NarcoTráfico</title>
-    <link rel="stylesheet" href="geral.css">
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-<header cla="header">
-    <a href="index.html" class="logo">LOGO</a>
-    <input type="checkbox" name="" id="side-menu" class="side=menu">
-    <label for="side-menu" class="hamb"><spam class="hamb-line"></spam>/label>
+    
+    <header class="header">
+        <a href="index.html" class="logo"> <img id="logo" src="logo.png"> </a>
+        <input type="checkbox" class="side-menu" id="side-menu">
+        <label class="hamb" for="side-menu"><span class="hamb-line"></span></label>
         <nav class="nav">
-        <ul class="meni">
-            <li><a href="#">Link 01</a></li>
-            <li><a href="#">Link 02</a></li>
-            <li><a href="#">Link 03</a></li>
-        </ul>
+            <ul class="menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="destaque.html">link0</a></li>
+                <li><a href="destaque.html">link1</a></li>
+                <li><a href="destaque.html">link2</a></li>
+            </ul>
         </nav>
-</header>
-<section class="conteudo">
-</section>
-<footer clas="rodape">
-    @Gastão Vidigal <br>
-    segundo <br>
-    @Damasio
-</footer>
+    </header>
+
+
+    <section class="conteudo">
+    </section>
+    <footer class="rodape">
+        @Gastão Vidigal <br>
+        segundo <br>
+        @Mary 
+    </footer>
 </body>
 </html>
