--- a/index.html
+++ b/index.html
@@ -25,11 +25,34 @@
 
 
     <section class="conteudo">
+        <div class= "info">
+</div>
     </section>
     <footer class="rodape">
         @Gastão Vidigal <br>
         segundo <br>
-        @Mary 
+        @Mary
     </footer>
-</body>
+    <h1>num sei oq, n sei oq la</h1>
+</div>
+    </div>
+    <div class="item-1" >
+        item 1
+    </div>
+    <div class="item-2" >
+        item 2
+    </div>
+    <div class="item-3" >
+        item 3
+    </div>
+    <div class="item-4" >
+        item 4
+    </div>
+    <div class="item-5" >
+        item 5
+    </div>
+    <div class="item-6" >
+        item 6
+    </div>
+
 </html>
