--- a/estudogrid.html
+++ b/estudogrid.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grid</title>
-    <link rel="stylesheet" href="geral.css">
+    <link rel="stylesheet" href="estudo.css">
 </head>
 <body>
-    <section class="site">  
-    <div class="vermelho">vermelho</div>
-    <div class="preto">preto</div>
-    <div class="cinza">cinza</div>
-    <div class="azul">azul</div>
-    <div class="verde">verde</div>
-    <div class="rosa">rosa</div>
-
+    <section class="site">
+        <div class="azul">azul</div>
+        <div class="vermelho">vermelho</div>
+        <div class="preto">preto</div>
+        <div class="roa">rosa</div>
+        <div class="cinza"></div>
+        <div class="verde"></div>
     </section>
     
 </body>
